--- a/MouseTrap.WPF/MouseTrap.WPF.csproj
+++ b/MouseTrap.WPF/MouseTrap.WPF.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="InputSimulator" Version="1.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MouseTrap\MouseTrap.csproj" />
   </ItemGroup>
 
