Added new icon and configuration

--- a/MouseTrap.WPF/appsettings.json
+++ b/MouseTrap.WPF/appsettings.json
@@ -1,5 +1,11 @@
 {
-  "Recording": {
-    "SleepMilliseconds": 1
-  }
+    "Recording": {
+        "SleepMilliseconds": 1
+    },
+    "Playback": {
+        "NextTime": {
+            "Max": 20000,
+            "Min": 5000
+        }
+    }
 }
